CB-20897 Changing the return type to Page of DistroXAutoScaleScalingActivityV1Endpoints from List